# mygit

./: .gitignore  README.md  justfile  pyproject.toml
src/mygit/: __init__.py  git.py
