[project]
name = "mygit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Salman Mohammed", email = "smohammed1993@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mygit = "mygit:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
]
